[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
hyper = { version = "0.14.23", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["full"] }
